Mon Apr 20 17:42:19 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* gtkrace.c, osr.c: only perform automatic osr when the position is a
	race and fix a problem in osr with chequers in the 3rd or 4th quadrant

Sat Apr 18 23:45:02 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* gtkchequer.c, play.c: fix two problems with the update of skill
	labels reported by Michel.

Sat Apr 18 22:29:37 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* gtkgame.c: set shrink FALSE in the panel pane
	* rollout.c: fix typo in jsd check causing cube rollouts to stop early 

Wed Apr 15 19:51:11 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* import.c: check for bg variations when importing mat.

Sun Apr  5 17:16:41 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* gtkboard.c, gtkgame.c: add labels to the manual dice widget

Fri Apr  3 22:04:43 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* gtkboard.c: Use the player's dice color to chose who wins
	the opening roll with manual dice.

Fri Apr  3 21:45:17 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* gnubgmodule.c, gtkprefs.c, import.c, multithread.c, play.c,
	relational.c, text.c: minor compile stuff, an error in the last
	checkin, and ifdef WIN32 the align in multithread.c

Fri Apr  3 13:59:50 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* backgammon.h, gtkboard.c, gtkchequer.c, play.c: CommandMove didn't
	accept moves of type 25/16.

Thu Apr  2 23:33:25 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* play.c: hopefully fix a crash related to canceling of manual dice

Thu Apr  2 22:32:14 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* play.c: fix a crash (assert in getCubeDecisionOrdering) when
	updating the current game annotions. 

Thu Apr  2 10:13:47 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* gnubg.c: hint - don't update annotation when working through tutor

Wed Apr  1 17:41:13 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* gtkoptions.c: display options was added twice and rng was update
	even if unchanged 
